# jdl

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat
src/jdl/: jdl.hpp  main.cpp
src/jdl/audio/: audio.hpp
src/jdl/color/: color.cpp  color.hpp
src/jdl/texture/: texture.cpp  texture.hpp  texture_init.cpp  texture_init_draw.cpp  texture_modify.cpp  texture_operations.cpp  texture_render.cpp  texture_transform.cpp  texture_utility.cpp  texture_utils.cpp
